[package]
name = "clib"
version = "0.2.4"
edition = "2021"
authors = ["oooutlk <oooutlk@outlook.com>"]
license = "MIT/Apache-2.0"
keywords = [ "ffi", "bindgen", "pkg-config", "header", "binding" ]
readme = "README.md"
repository = "https://github.com/oooutlk/clib"
documentation = "https://docs.rs/clib"
categories = [ "external-ffi-bindings", "development-tools::ffi" ]
description = "Generates bindings for C libraries"

[build-dependencies]
anyhow = "1.0"
bindgen = "0.64"
inwelling = "0.5"
pkg-config = "0.3"
toml = "0.7.3"
